# old_seed_archive

./: Cargo.toml
examples/custom_router/: Cargo.toml  README.md  index.html
examples/custom_router/router_macro_derive/: Cargo.toml
examples/custom_router/router_macro_derive/src/: guard.rs  id_parameter.rs  init.rs  lib.rs  query_parameters.rs  root.rs  routing.rs  routing_module.rs  state.rs  view.rs
examples/custom_router/src/: lib.rs  router.rs  top_bar.rs
examples/custom_router/src/models/: user.rs
examples/custom_router/src/pages/admin/: mod.rs
examples/custom_router/src/pages/dashboard/: message.rs  mod.rs  statistics.rs
examples/custom_router/src/pages/dashboard/task_list/: mod.rs  task.rs
examples/custom_router/src/pages/login/: mod.rs
examples/custom_router/src/pages/register/: mod.rs
examples/custom_router/src/router/: children.rs  mod.rs  route.rs  state.rs  super_route.rs  super_router.rs  url.rs  view.rs
examples/custom_router/tests/: url.rs  web.rs
examples/custom_router/tests/init_state/: mod.rs  other.rs  profile.rs
examples/custom_router/tests/routing_module/: admin.rs  dashboard.rs  mod.rs  other.rs  profile.rs
examples/custom_router/tests/routing_module/pages/: admin.rs  dashboard.rs  other.rs  profile.rs
