[package]
name = "custom_router"
version = "0.1.0"
authors = ["arn-the-long-beard <arn.menant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib" ,"rlib"]


[dependencies]
seed = {path = "../../"}
serde = "1.0.115"
serde_json = "1.0.51"
strum = "0.19.2"
strum_macros = "0.19.2"
heck="0.3.1"
router_macro_derive =  { path = "./router_macro_derive"}
enum_paths= {git ="https://github.com/mankinskin/enum_paths.git"}

[dependencies.web-sys]
version = "0.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[profile.release]
lto = true

opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

